# hi-benchmarks

./: CMakeLists.txt  CONTRIBUTORS.md  ChangeLog  Dockerfile  Dockerfile.aarch64  Dockerfile.alpine  Dockerfile.armv7hf  Makefile.am  README.md  REDISTRIBUTED.md  configure.ac  coverity-scan.sh  docker-build.sh  hibenchmarks-installer.sh  hibenchmarks.cppcheck  hibenchmarks.spec.in  kickstart-static64.sh  kickstart.sh
charts.d/: README.md  ap.chart.sh  apache.chart.sh  apcupsd.chart.sh  cpu_apps.chart.sh  cpufreq.chart.sh  example.chart.sh  exim.chart.sh  hddtemp.chart.sh  libreswan.chart.sh  load_average.chart.sh  mem_apps.chart.sh  mysql.chart.sh  nginx.chart.sh  nut.chart.sh  opensips.chart.sh  phpfpm.chart.sh  postfix.chart.sh  sensors.chart.sh  squid.chart.sh  tomcat.chart.sh
conf.d/: apps_groups.conf  charts.d.conf  fping.conf  health_alarm_notify.conf  node.d.conf  python.d.conf  stream.conf
conf.d/charts.d/: ap.conf  apache.conf  apcupsd.conf  cpu_apps.conf  cpufreq.conf  example.conf  exim.conf  hddtemp.conf  nut.conf  (+11 more)
contrib/: Makefile.am  README.md  nc-backend.sh
contrib/debian/: control  control.wheezy  copyright  hibenchmarks.conf  hibenchmarks.default  hibenchmarks.init  hibenchmarks.install  hibenchmarks.lintian-overrides  hibenchmarks.postinst.in  hibenchmarks.postrm  hibenchmarks.service  rules
contrib/rhel/: build-hibenchmarks-rpm.sh
diagrams/: Makefile.am  registry.puml
installer/: functions.sh
makeself/: Makefile.am  README.md  build-x86_64-static.sh  build.sh  functions.sh  install-or-update.sh  makeself-license.txt  makeself.lsm  post-installer.sh  run-all-jobs.sh
node.d/: Makefile.am  README.md  fronius.node.js  named.node.js  sma_webbox.node.js  snmp.node.js  stiebeleltron.node.js
plugins.d/: README.md  alarm-notify.sh  alarm-test.sh  cgroup-name.sh  cgroup-network-helper.sh  charts.d.plugin  fping.plugin  loopsleepms.sh.inc  node.d.plugin  python.d.plugin  tc-qos-helper.sh
profile/: Makefile  benchmark-dictionary.c  benchmark-line-parsing.c  benchmark-procfile-parser.c  benchmark-registry.c  test-eval.c
python.d/: Makefile.am  README.md  apache.chart.py  beanstalk.chart.py  bind_rndc.chart.py  boinc.chart.py  ceph.chart.py  chrony.chart.py  couchdb.chart.py  cpufreq.chart.py  cpuidle.chart.py  dns_query_time.chart.py  dovecot.chart.py  elasticsearch.chart.py  example.chart.py  exim.chart.py  fail2ban.chart.py  freeradius.chart.py  go_expvar.chart.py  haproxy.chart.py  hddtemp.chart.py  httpcheck.chart.py  icecast.chart.py  ipfs.chart.py  isc_dhcpd.chart.py  litespeed.chart.py  logind.chart.py  mdstat.chart.py  memcached.chart.py  mongodb.chart.py  mysql.chart.py  nginx.chart.py  nginx_plus.chart.py  nsd.chart.py  ntpd.chart.py  ovpn_status_log.chart.py  phpfpm.chart.py  portcheck.chart.py  postfix.chart.py  postgres.chart.py  (+19 more)
src/: Makefile.am  daemon.c  dictionary.h  eval.h  inlined.h  ipc.h  main.h  popen.h  signals.c  signals.h  simple_pattern.h  socket.c  socket.h  storage_number.c  sys_kernel_mm_ksm.c  threads.h  zfs_common.h
src/backend/: backend_prometheus.c  backends.c
src/cgroups/: cgroup-network.c
src/fs/: sys_devices_system_edac_mc.c  sys_devices_system_node.c  sys_fs_btrfs.c  sys_fs_cgroup.c  sys_kernel_mm_ksm.c  zfs_common.c
src/health/: health.c  health.h  health_config.c  health_json.c  health_log.c
src/host/: daemon.c  ipc.c  locks.c  main.c  popen.c  signals.c  socket.c  threads.c
src/include/: adaptive_resortable_list.h  backend_prometheus.h  backends.h  clocks.h  common.h  daemon.h  global_statistics.h  inlined.h  locks.h  log.h  plugin_checks.h  plugin_nfacct.h  plugin_proc.h  plugin_proc_diskspace.h  plugin_tc.h  plugins_d.h  registry.h  registry_internals.h  registry_person.h  registry_url.h  rrd.h  rrd2json.h  rrdpush.h  statistical.h  statsd.h  storage_number.h  url.h  web_api_old.h  web_api_v1.h  web_client.h  web_server.h
src/plugin/: apps_plugin.c  freeipmi_plugin.c  plugin_checks.c  plugin_freebsd.c  plugin_freebsd.h  plugin_idlejitter.c  plugin_idlejitter.h  plugin_macos.c  plugin_macos.h  plugin_nfacct.c  plugin_proc.c  plugin_proc_diskspace.c  plugin_tc.c  plugins_d.c
src/proc/: proc_diskstats.c  proc_interrupts.c  proc_loadavg.c  proc_meminfo.c  proc_net_dev.c  proc_net_ip_vs_stats.c  proc_net_netstat.c  proc_net_rpc_nfs.c  proc_net_rpc_nfsd.c  proc_net_sctp_snmp.c  proc_net_snmp.c  proc_net_snmp6.c  proc_net_sockstat.c  proc_net_sockstat6.c  proc_net_softnet_stat.c  proc_net_stat_conntrack.c  proc_net_stat_synproxy.c  proc_self_mountinfo.c  proc_self_mountinfo.h  proc_softirqs.c  proc_spl_kstat_zfs.c  proc_stat.c  proc_sys_kernel_random_entropy_avail.c  proc_uptime.c  proc_vmstat.c  procfile.c  procfile.h
src/registry/: registry.c  registry_db.c  registry_init.c  registry_internals.c  registry_internals.h  registry_log.c  registry_machine.c  registry_machine.h  registry_person.c  registry_url.c
src/rrd/: rrd.c  rrd2json.c  rrd2json_api_old.c  rrd2json_api_old.h  rrdcalc.c  rrdcalctemplate.c  rrddim.c  rrddimvar.c  rrdfamily.c  rrdhost.c  rrdpush.c  rrdset.c  rrdsetvar.c  rrdvar.c
src/stat/: global_statistics.c  statistical.c  statsd.c  storage_number.c
src/test/: unit_test.c  unit_test.h
src/util/: adaptive_resortable_list.c  appconfig.c  appconfig.h  avl.c  avl.h  clocks.c  common.c  dictionary.c  eval.c  log.c  simple_pattern.c
src/web/: global_statistics.c  url.c  web_api_old.c  web_api_v1.c  web_buffer.c  web_buffer.h  web_buffer_svg.c  web_buffer_svg.h  web_client.c  web_server.c
system/: Makefile.am  hibenchmarks-freebsd.in  hibenchmarks-init-d.in  hibenchmarks-lsb.in  hibenchmarks-openrc.in  hibenchmarks.conf  hibenchmarks.logrotate.in  hibenchmarks.plist.in  hibenchmarks.service.in
tests/: README.md  stress.sh
web/: Makefile.am  dashboard.css  dashboard.html  dashboard.js  dashboard.slate.css  dashboard_info.js  dashboard_info_custom_example.js  demo.html  demo2.html  demosites.html  demosites2.html  goto-host-from-alarm.html  hibenchmarks-swagger.json  hibenchmarks-swagger.yaml  index.html  infographic.html  refresh-badges.js  registry.html  sitemap.xml  tv.html
(+80 files in other folders)
